# CrewDefine

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/crewdefine/: __init__.py  __main__.py  cli.py  config.py  generator.py  interview.py  llm.py  schema.py  tools_catalog.py  validator.py  yaml_format.py
src/crewdefine/prompts/: __init__.py  interviewer.py  persona.py
tests/: conftest.py  test_generator.py  test_interview.py  test_schema.py  test_validator.py
